# wsl-1B-of-rows

./: README.md  etl_duckdb.py  etl_pandas.py  etl_python.py  pyproject.toml
dashboard/: st_dashboard.py
data/: measurements_summary.parquet
