[tool.poetry]
name = "1bilhao-de-linhas"
version = "0.1.0"
description = ""
authors = ["Jonathan Moraes <jonamoraes20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
tqdm = "^4.66.4"
polars = "^1.2.1"
duckdb = "^1.0.0"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
